# Resume-screening

./: .gitignore  CLAUDE.md  CONTRIBUTING.MD  README.md  Students.md  app.py  main.py  pyproject.toml  render.yaml  requirements.txt
sample_data/: sample_jd.txt
scripts/: generate_sample_resumes.py
src/: critique.py  evals.py  extractor.py  models.py  pdf_parser.py  prompts.py  reporter.py  scorer.py
tests/: test_extractor.py  test_pdf_parser.py  test_reporter.py
tests/evals/: cases.py
